--- a/EDApt1Exercises.ipynb
+++ b/EDApt1Exercises.ipynb
@@ -17,7 +17,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# import the pandas library and use the alias 'pd'\n"
+    "# import the pandas library and use the alias 'pd'\n",
+    "import pandas as pd"
    ]
   },
   {
@@ -41,11 +42,12 @@
    "outputs": [],
    "source": [
     "#create the s1 series from the list: [10,20,30,40,50]\n",
-    "\n",
+    "s1 = pd.Series([10, 20, 30, 40, 50])\n",
     "# additional practice\n",
     "# create a series called s_tuple from the tuple: (\"apple\", \"banana\", \"cherry\")\n",
-    "\n",
-    "# create a series called s_dictionary from the dictionary: {\"brand\": \"Ford\", \"model\": \"Mustang\", \"year\": 1964}\n"
+    "s_tuple = pd.Series((\"apple\", \"banana\", \"cherry\"))\n",
+    "# create a series called s_dictionary from the dictionary: {\"brand\": \"Ford\", \"model\": \"Mustang\", \"year\": 1964}\n",
+    "s_dictionary = pd.Series({\"brand\": \"Ford\", \"model\": \"Mustang\", \"year\": 1964})"
    ]
   },
   {
@@ -58,14 +60,14 @@
    "outputs": [],
    "source": [
     "# fill in the blank with the series values and index values\n",
-    "print(\"The s1 series values are:\", #s1 values#)\n",
-    "print(\"The s1 index values are:\", #s1 index values#)\n",
+    "print(\"The s1 series values are:\", s1.values) #s1 values#)\n",
+    "print(\"The s1 index values are:\", s1.index.values) #s1 index values#)\n",
     "print(\"\\n\")\n",
-    "print(\"The s_tuple series values are:\", #s_tuple values#)\n",
-    "print(\"The s_tuple index values are:\", #s_tuple index values#)\n",
+    "print(\"The s_tuple series values are:\", s_tuple.values) #s_tuple values#)\n",
+    "print(\"The s_tuple index values are:\", s_tuple.index.values) #s_tuple index values#)\n",
     "print(\"\\n\")\n",
-    "print(\"The s_dictionary series values are:\", #s_dictionary values#)\n",
-    "print(\"The s_dictionary index values are:\", #s_dictionary index values#)"
+    "print(\"The s_dictionary series values are:\", s_dictionary.values) #s_dictionary values#)\n",
+    "print(\"The s_dictionary index values are:\", s_dictionary.index.values) #s_dictionary index values#)"
    ]
   },
   {
@@ -85,7 +87,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# create the s2 series from the list [80,93,78,85,97] and with labeled indexes ['English','Science','Social','Tamil','Maths']\n"
+    "# create the s2 series from the list [80,93,78,85,97] and with labeled indexes ['English','Science','Social','Tamil','Maths']\n",
+    "s2 = pd.Series([80, 93, 78, 85, 97])\n",
+    "index = ['English','Science','Social','Tamil','Maths']"
    ]
   },
   {
@@ -95,7 +99,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# print the s2 series"
+    "print(\"The Marks obtained by student are\", s2) # print the s2 series\n"
    ]
   },
   {
@@ -114,8 +118,9 @@
    "outputs": [],
    "source": [
     "# assign the s2 series name to be \"Student Marks\"\n",
-    "\n",
-    "# assign the s2 index name to be \"Subject\"\n"
+    "s2.name = 'Student Marks'\n",
+    "# assign the s2 index name to be \"Subject\"\n",
+    "s2.index.name = 'Subject'"
    ]
   },
   {
@@ -125,7 +130,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# print the s2 series again to see the newly assigned name and index name\n"
+    "# print the s2 series again to see the newly assigned name and index name\n",
+    "print(s2)"
    ]
   },
   {
@@ -148,7 +154,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# return the first element in the s2 series\n"
+    "# return the first element in the s2 series\n",
+    "print(s2[0])"
    ]
   },
   {
@@ -159,7 +166,8 @@
    "outputs": [],
    "source": [
     "# slicing using default integer index\n",
-    "# return the elements starting at position one and ending with the element at index 3\n"
+    "# return the elements starting at position one and ending with the element at index 3\n",
+    "print(s2[1:4])"
    ]
   },
   {
@@ -170,7 +178,8 @@
    "outputs": [],
    "source": [
     "# Slicing using string index\n",
-    "# return the element associated with the index 'Tamil'\n"
+    "# return the element associated with the index 'Tamil'\n",
+    "print(s2['Tamil'])"
    ]
   },
   {
@@ -196,7 +205,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# create a dictionary of fruit names and their prices. Use the values from the article\n"
+    "# create a dictionary of fruit names and their prices. Use the values from the article\n",
+    "dict_fruits = {'Orange':80, 'Apples':210, 'Bananas':50, 'Grapes':90, 'Watermelon':70}"
    ]
   },
   {
@@ -207,7 +217,8 @@
    "outputs": [],
    "source": [
     "# Lets convert this dictionary into a series\n",
-    "# use the pandas method .Series() \n"
+    "# use the pandas method .Series() \n",
+    "fruits = pd.Series(dict_fruits)"
    ]
   },
   {
@@ -217,7 +228,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# print the series\n"
+    "# print the series\n",
+    "print(\"Fruits and prices\", fruits)"
    ]
   },
   {
@@ -227,7 +239,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Slice the series and retrieve price of grapes\n"
+    "# Slice the series and retrieve price of grapes\n",
+    "print(\"The price per kg of grapes is:\", fruits['Grapes'])"
    ]
   },
   {
@@ -249,7 +262,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# create a dataframe from the s2 series\n"
+    "# create a dataframe from the s2 series\n",
+    "df_marks = pd.DataFrame(s2, columns=['Student1'])"
    ]
   },
   {
@@ -259,7 +273,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# print the dataframe\n"
+    "# print the dataframe\n",
+    "print(\"The dataframe created from series isn\", df_marks)"
    ]
   },
   {
@@ -285,26 +300,48 @@
    "source": [
     "# Create height series using [5.3, 6.2,5.8,5.0,5.5] for values, ['Person 1','Person 2','Person 3','Person 4','Person 5'] for indexes\n",
     "\n",
-    "\n",
-    "# Create weight series (in kgs) using [65,89,75,60,59] for values and the same indexes as height\n"
+    "height = pd.Series([5.3, 6.2,5.8,5.0,5.5], index = ['Person 1','Person 2','Person 3','Person 4','Person 5'])\n",
+    "# Create weight series (in kgs) using [65,89,75,60,59] for values and the same indexes as height\n",
+    "weight = pd.Series([65,89,75,60,59], index = ['Person 1','Person 2','Person 3','Person 4','Person 5'])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "id": "1bd7b205-0443-454e-85d5-bcd9e5478aea",
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'pd' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[2], line 2\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[38;5;66;03m# Create a dataframe from the height and weight series above\u001b[39;00m\n\u001b[1;32m----> 2\u001b[0m df_person \u001b[38;5;241m=\u001b[39m \u001b[43mpd\u001b[49m\u001b[38;5;241m.\u001b[39mDataFrame({\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mheight\u001b[39m\u001b[38;5;124m'\u001b[39m: height, \u001b[38;5;124m'\u001b[39m\u001b[38;5;124mweight\u001b[39m\u001b[38;5;124m'\u001b[39m: weight})\n\u001b[0;32m      3\u001b[0m \u001b[38;5;66;03m# print the dataframe\u001b[39;00m\n\u001b[0;32m      4\u001b[0m \u001b[38;5;28mprint\u001b[39m(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mThe person table details are:n\u001b[39m\u001b[38;5;124m\"\u001b[39m, df_person)\n",
+      "\u001b[1;31mNameError\u001b[0m: name 'pd' is not defined"
+     ]
+    }
+   ],
+   "source": [
+    "# Create a dataframe from the height and weight series above\n",
+    "df_person = pd.DataFrame({'height': height, 'weight': weight})\n",
+    "# print the dataframe\n",
+    "print(\"The person table details are:n\", df_person)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "1bd7b205-0443-454e-85d5-bcd9e5478aea",
+   "id": "aa57cde6",
    "metadata": {},
    "outputs": [],
-   "source": [
-    "# Create a dataframe from the height and weight series above\n",
-    "\n",
-    "# print the dataframe\n"
-   ]
+   "source": []
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -318,7 +355,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.8"
+   "version": "3.10.9"
   }
  },
  "nbformat": 4,
